SHruti/Srividhya Fixing alignment of Book component

--- a/src/components/book/book.component.scss
+++ b/src/components/book/book.component.scss
@@ -13,7 +13,7 @@
 }
 
 .actionButton {
-  margin-top: 50%;
+  margin-top: 25%;
   margin-left: 15%;
   width: 30%;
   height: 25%;
@@ -24,14 +24,33 @@
   @extend .actionButton;
   background: #219161;
   color: black;
-
+  font-size: 200%;
+  width: 30%;
+  height: 35%;
 }
 
 .cancel {
   @extend .actionButton;
   background: #f30d0d;
+  font-size: 200%;
+  width: 30%;
+  height: 35%;
 }
-
+.inputBoxStyle{
+  border-color: black;
+  background-color: #fff;
+  color: #444;
+  position: relative;
+  z-index: 2;
+  display: block;
+  margin: -1px;
+  padding: 16px;
+  border-width: 1px;
+  border-style: solid;
+  font-size: 16px;
+  margin-left: 20%;
+text-align: center;
+}
 .durationButton {
   margin-top: 10%;
   margin-left: 10%;
@@ -39,13 +58,17 @@
   height: 25%;
   font-size: 150%;
 }
+.duration{
+  margin-top: 20%;
+}
 
 .empIdButton {
-  margin-top: 20% ;
-  margin-left: 30% ;
+  margin-top: 25% ;
+  margin-left: 25% ;
   width: 20%;
   height: 25%;
-  font-size: 150%;
+  font-size: 170%;
+  align-content: center;
 }
 
 .greenDuration {
