--- a/src/components/room/room.component.scss
+++ b/src/components/room/room.component.scss
@@ -40,8 +40,9 @@ body, .fitPage {
   }
   .endButton {
     margin-top: 5%;
-    width: 50%;
+    width: 70%;
     height: 25%;
     font-size: 150%;
   }
+
 }
